Fix overflow in live-solution when input a large amount of number

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
   font-size: 50px;
   border: 2px solid #00ffff;
   border-radius: 25px;
+  overflow: hidden;
 }
 
 .first-row,
